# pytest-json-report

./: .gitignore  .groblignore  README.md  TODO.md  coverage.xml  pyproject.toml  tox.ini
scripts/: run_tests.sh
src/pytest_json_report/: plugin.py  serialize.py
tests/: conftest.py  test_pytest_json_report.py
